{
    "name": "PlayerControllerInput",
    "maps": [
        {
            "name": "FlightMap",
            "id": "ea112126-2d30-49b5-ad97-0543cd57b29d",
            "actions": [
                {
                    "name": "Flight",
                    "type": "Value",
                    "id": "da0c6682-e16b-44fd-b26a-9292cb47ae44",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "25c75b4b-4825-4c58-ac84-ccc63dd9d17e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToggleFirstPerson",
                    "type": "Button",
                    "id": "834ae251-2bbc-4d76-b69e-470d984b5fcc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Boost",
                    "type": "Button",
                    "id": "6bc89b0c-aa8c-4094-9be1-f208d2cdb9b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Brake",
                    "type": "Value",
                    "id": "2f3d5767-b19f-4b17-86f0-c3fec64b982b",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LockCursor",
                    "type": "Button",
                    "id": "44d4a4da-759a-4383-89f0-d27fcdc2900d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c99466a3-163d-4a1c-9dc0-905e4c648fa0",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "afdc5b6e-7dcc-43cb-afea-5f93056d6257",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "77e056d8-2ec7-48df-a885-d2b1a7aa0d53",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "407e330b-2cb0-43d0-b039-713a57756bfb",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5348f0f3-acc1-469c-940c-a8e7758389db",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "eb8a063e-af05-4b6d-aec0-1f5d2626d1ea",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Flight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6235f709-32c4-40e0-b0bb-1dcb10636a6f",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f1fe46f-e246-46ec-ae36-26eb35840f8e",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf950a29-0cb3-42d7-84e9-64b798516eca",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFirstPerson",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d9d728c-17db-499f-ba46-8257e67848d4",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleFirstPerson",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fb94888-b5b2-4fa0-8afc-3ccc52ac564d",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "007930f4-0d87-4384-a0fd-09f1015fefce",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Boost",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e32f2bb-5c36-4ea3-a990-629cf1d42768",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d521862d-6812-4e4a-8061-1a4f02c5ca71",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d32f931f-0a50-4afe-9b39-960ce01c47c5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockCursor",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}